Migrate content from MkDocs to al-folio: Update About, CV, Projects, and Publications

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,115 +1,63 @@
----
----
-
-@string{aps = {American Physical Society,}}
-
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+@article{chung2025realtime,
+  title={Real-time Anomaly Detection for Liquid Argon Time Projection Chambers},
+  author={Chung, Seokju and Cleeve, Jack and Malige, Akshay and Karagiorgi, Georgia and Gerlach, Lino and Pol, Adrian A. and Ojalvo, Isobel},
+  journal={arXiv preprint arXiv:2509.21817},
+  year={2025},
+  url={https://arxiv.org/abs/2509.21817},
+  selected={true}
 }
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@article{wong2024comparison,
+  title={Comparison of readout systems for high-rate silicon photomultiplier applications},
+  author={Wong, M. L. and Kołodziej, M. and Briggl, K. and Hetzel, R. and Korcyl, G. and Lalik, R. and Malige, A.},
+  journal={Journal of Instrumentation},
+  year={2024},
+  doi={10.1088/1748-0221/19/01/P01019},
+  url={https://doi.org/10.1088/1748-0221/19/01/P01019},
+  selected={true}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+@phdthesis{malige2023readout,
+  title={Read-out and online processing for the Forward Tracker in HADES and PANDA},
+  author={Malige, Akshay},
+  school={Jagiellonian University},
+  year={2023},
+  selected={true}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true},
-  inspirehep_id = {3255}
+@article{firlej2023production,
+  title={Production tests of front-end electronics for Straw Tube Trackers in HADES and PANDA experiments at FAIR},
+  author={Firlej, Mirosław and others},
+  journal={Journal of Instrumentation},
+  year={2023},
+  doi={10.1088/1748-0221/18/05/P05008},
+  url={https://doi.org/10.1088/1748-0221/18/05/P05008},
+  selected={true}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@article{malige2022realtime,
+  title={Real-Time Data Processing Pipeline for Trigger Readout Board-Based Data Acquisition Systems},
+  author={Malige, A. and Korcyl, G. and Firlej, M. and Fiutowski, T. and Idzik, M. and Korzeniak, B. and Lalik, R.},
+  journal={IEEE Transactions on Nuclear Science},
+  year={2022},
+  doi={10.1109/TNS.2022.3168889},
+  url={https://doi.org/10.1109/TNS.2022.3168889},
+  selected={true}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@article{rathod2020hyperon,
+  title={Hyperon studies and development of forward tracker for hades detector},
+  author={Rathod, Narendra and Lalik, Rafał and Malige, Akshay},
+  journal={arXiv preprint arXiv:2004.09387},
+  year={2020},
+  url={https://arxiv.org/abs/2004.09387},
+  selected={true}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
-}
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
+@article{rathod2019measurement,
+  title={Measurement of signal-to-noise ratio in straw tube detectors for PANDA forward tracker},
+  author={Rathod, Narendra and Smyrski, Jerzy and Malige, Akshay},
+  journal={Basic Concepts in Nuclear Physics: Theory, Experiments and Applications},
+  year={2019},
+  selected={true}
 }
